require auto config

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             -webkit-box-reflect: above 0 -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0.6)));
         }
     </style>
-    <script type="text/javascript" src="javascripts/require.min.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/require-config.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/init/index.js"></script>
+    <script id="require.min" xml:base="." type="text/javascript" src="javascripts/require.min.js"></script>
+    <script type="text/javascript" src="require-config.js"></script>
+    <script type="text/javascript" src="toonly/javascripts/pages/index.js"></script>
 </head>
 <body>
 </body>
