--- a/blogcontent/blog_java_default_values.html
+++ b/blogcontent/blog_java_default_values.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Java对象填充默认值</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="toonly/stylesheets/blog.css" media="screen">
-    <script type="text/javascript" src="javascripts/require.min.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/require-config.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/init/blogs_20160322.js"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css" media="screen">
+    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script type="text/javascript" src="../require-config.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/pages/blogs_20160322.js"></script>
 </head>
 <body>
 <section class="blog-header">
