--- a/blogcontent/blogs_20160322.html
+++ b/blogcontent/blogs_20160322.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="Content-Language" content="zh-CN"/>
     <title>CaoYouxin的博客</title>
-    <link rel="stylesheet" type="text/css" href="toonly/stylesheets/blog.css">
+    <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css">
     <style>
         body {
             font: 12px/21px Tahoma, "Microsoft Yahei", Geneva, sans-serif;
@@ -73,9 +73,9 @@
             margin: 5px 0 0 0;
         }
     </style>
-    <script type="text/javascript" src="javascripts/require.min.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/require-config.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/init/blogs_20160322.js"></script>
+    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script type="text/javascript" src="../require-config.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/pages/blogs_20160322.js"></script>
 </head>
 <body>
 <section class="blog-header">
