--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>CaoYouXin&#39;s blog by CaoYouXin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="toonly/stylesheets/blog.css" media="screen">
-    <script type="text/javascript" src="javascripts/require.min.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/require-config.js"></script>
-    <script type="text/javascript" src="toonly/javascripts/init/index_.js"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css" media="screen">
+    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script type="text/javascript" src="../require-config.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/pages/index_.js"></script>
 </head>
 <body>
 <section class="page-header">
