blog模块放到blogcontent文件夹。

--- a/blogcontent/blogs_20160322.html
+++ b/blogcontent/blogs_20160322.html
@@ -73,9 +73,9 @@
             margin: 5px 0 0 0;
         }
     </style>
-    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script id="require.min" type="text/javascript" src="../javascripts/require.min.js"></script>
     <script type="text/javascript" src="../require-config.js"></script>
-    <script type="text/javascript" src="../toonly/javascripts/pages/blogs_20160322.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/init/blogs_20160322.js"></script>
 </head>
 <body>
 <section class="blog-header">
