--- a/blogcontent/blog_java_default_values.html
+++ b/blogcontent/blog_java_default_values.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css" media="screen">
-    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script id="require.min" type="text/javascript" src="../javascripts/require.min.js"></script>
     <script type="text/javascript" src="../require-config.js"></script>
-    <script type="text/javascript" src="../toonly/javascripts/pages/blogs_20160322.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/init/blogs_20160322.js"></script>
 </head>
 <body>
 <section class="blog-header">
