--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css" media="screen">
-    <script type="text/javascript" src="../javascripts/require.min.js"></script>
+    <script id="require.min" type="text/javascript" src="../javascripts/require.min.js"></script>
     <script type="text/javascript" src="../require-config.js"></script>
-    <script type="text/javascript" src="../toonly/javascripts/pages/index_.js"></script>
+    <script type="text/javascript" src="../toonly/javascripts/init/index_.js"></script>
 </head>
 <body>
 <section class="page-header">
