--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>H5屏幕适配</title>
+    <title>HTML相关问答</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
@@ -18,30 +18,7 @@
 </section>
 
 <section class="blog-content">
-    <p>项目背景: 适应各种手机屏幕尺寸的H5页面.</p>
-    <p>1. 解析&lt;meta name="viewport" content="width=750, user-scalable=no"&gt;</p>
-    <p>2. 针对不同平台做不同的处理</p>
-<pre>
-if (isAndroid) {
-    var medium_dpi = data.width / win.screen.availWidth * window.devicePixelRatio * 160;
 
-    medium_dpi = medium_dpi.toFixed(2);
-
-    data['target-densitydpi'] = medium_dpi;
-} else {
-    var scale = win.screen.availWidth / data.width;
-
-    scale = scale.toFixed(2);
-
-    data['initial-scale'] = data['maximum-scale'] = data['minimum-scale'] = scale;
-}
-</pre>
-    <p>3. PageSlide中的问题, iframe设置方式采用body上加zoom属性</p>
-<pre>
-if (data.width !== pData.width) {
-    document.body.style.zoom = pData.width / data.width;
-}
-</pre>
 </section>
 
 <div id="tongji">
