浏览器内核相关问题

--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -40,6 +40,16 @@
     <p class="a">link属于XHTML标签，除了加载CSS外，还能用于定义RSS, 定义rel连接属性等作用；而@import是CSS提供的，只能用于加载CSS。</p>
     <p class="a">link中定义的CSS文件会有按照加载次序的覆盖效果, 而@import加载的CSS不会覆盖link加载的CSS, 似乎在优先级上有区别。</p>
     <p class="a"><a href="../tests/import_load.html" class="ex" target="_blank">@import加载时机</a></p>
+    <p class="q">介绍一下你对浏览器内核的理解？</p>
+    <p class="a">与内核相对的是壳(shell), 我曾使用过KDE系统, Linux下最炫酷的shell。浏览器的内核分两个主要组成部分, 渲染引擎和JS引擎。</p>
+    <p class="a">渲染引擎负责获取网页内容, 及I/O部分; 计算样式, 显示内容。</p>
+    <p class="a">JS引擎比如谷歌浏览器的V8引擎, 负责高效地执行Javascript脚本。</p>
+    <p class="a">就浏览器来说，互联网经历了十年的高速发展期，近几年市场上也推出了很多新的浏览器，但是他们并非是采用自主开发的内核，所以浏览器内核本身实际没有实质突破。</p>
+    <p class="q">常见的浏览器内核有哪些？</p>
+    <p class="a">Trident内核：IE,MaxThon,TT,The World,360,搜狗浏览器等。[又称MSHTML]</p>
+    <p class="a">Gecko内核：Netscape6及以上版本，FF,MozillaSuite/SeaMonkey等</p>
+    <p class="a">Presto内核：Opera7及以上。      [Opera内核原为：Presto，现为：Blink;]</p>
+    <p class="a">Webkit内核：Safari,Chrome等。   [ Chrome的：Blink（WebKit的分支）]</p>
 </section>
 
 <div id="tongji">
