--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -79,6 +79,10 @@
 &lt;![endif]--&gt;
 </pre>
     <p class="a">如何区分HTML5： 根据以上介绍的新特性, 另简单的一点doctype。</p>
+    <p class="q">简述一下你对HTML语义化的理解？</p>
+    <p class="a">从网页开发人员的角度讲, 非语义化的局面所描述的一种极端情况是用一个标签, 加上不同的class CSS来实现所有控件。
+        我想这是语义化的初衷, 因为极端情况下实现起来看似牛逼, 实则心累啊。</p>
+    <p class="a">从处理语义化文档的程序的角度讲, 又是给另一部分开发人员解放了心灵。</p>
 </section>
 
 <div id="tongji">
