我的心里话！

--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -83,6 +83,8 @@
     <p class="a">从网页开发人员的角度讲, 非语义化的局面所描述的一种极端情况是用一个标签, 加上不同的class CSS来实现所有控件。
         我想这是语义化的初衷, 因为极端情况下实现起来看似牛逼, 实则心累啊。</p>
     <p class="a">从处理语义化文档的程序的角度讲, 又是给另一部分开发人员解放了心灵。</p>
+    <p class="q">HTML5的离线储存怎么使用，工作原理能不能解释一下？</p>
+
 </section>
 
 <div id="tongji">
