--- a/blogcontent/blog_my_words.html
+++ b/blogcontent/blog_my_words.html
@@ -27,7 +27,7 @@
     <strong>Force!</strong><br/>
     说到强迫接受我的意思, 为什么没人在意我的不自信是需要关怀的呢? 好吧, 我强迫别人接受我认为是对的事情, 这是不恰当的, 究其原因在于我的音量抬高了。<br/>
     <strong>Psychological Transmision</strong><br/>
-    哈哈, 说实话, 我开始关心如何默默的传达我的意思, 注意⚠️, 不是默默的控制!<br/>
+    哈哈, 说实话, 我开始关心如何默默地传达我的意思, 注意⚠️, 不是默默的控制!<br/>
     心灵传输不管我用多么低的音量, 都能准确的将我的意思传递过去。<br/>
     <strong>请接受我吧!</strong><br/>
 </section>
