--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -16,9 +16,9 @@
 <section class="page-header">
     <h1 class="project-name">CaoYouXin&#39;s blog</h1>
     <h2 class="project-tagline">^_^</h2>
-    <a href="https://github.com/CaoYouXin/myblog" class="btn">View on GitHub</a>
-    <a href="https://github.com/CaoYouXin/myblog/zipball/master" class="btn">Download .zip</a>
-    <a href="https://github.com/CaoYouXin/myblog/tarball/master" class="btn">Download .tar.gz</a>
+    <a target="_blank" href="https://github.com/CaoYouXin/myblog" class="btn">View on GitHub</a>
+    <a target="_blank" href="https://github.com/CaoYouXin/myblog/zipball/master" class="btn">Download .zip</a>
+    <a target="_blank" href="https://github.com/CaoYouXin/myblog/tarball/master" class="btn">Download .tar.gz</a>
 </section>
 
 <section class="main-content">
