--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -83,8 +83,17 @@
     <p class="a">从网页开发人员的角度讲, 非语义化的局面所描述的一种极端情况是用一个标签, 加上不同的class CSS来实现所有控件。
         我想这是语义化的初衷, 因为极端情况下实现起来看似牛逼, 实则心累啊。</p>
     <p class="a">从处理语义化文档的程序的角度讲, 又是给另一部分开发人员解放了心灵。</p>
-    <p class="q">HTML5的离线储存怎么使用，工作原理能不能解释一下？</p>
-
+    <p class="q">HTML5的离线储存怎么使用，工作原理能不能解释一下？浏览器是怎么对HTML5的离线储存资源进行管理和加载的呢？</p>
+    <p class="a"><a
+            href="../tests/offline-cache.html"
+            class="ex" target="_blank">离线存储小实例</a></p>
+    <p class="a">离线存储的原理大致是浏览器解析html标签的manifest属性后, 将需要缓存的文件的ETag或者Last-Modify Time请求到本机对比。manifest属性是对一个html文件的定制, 对缓存的定制不受浏览器disable cache设置的影响。</p>
+    <p class="q">请描述一下 cookies，sessionStorage 和 localStorage 的区别？</p>
+    <p class="a">cookies是一小段文本为内容的文件, 一般文件名作为键, 文件内容作为值。 sessionStorage 和 localStorage 为键值对管理工具, 其中 sessionStorage 的内容在页面关闭时清除。</p>
+    <p class="q">iframe有那些缺点？</p>
+    <p class="a">在我的<a
+            href="https://caoyouxin.gitbooks.io/pageslider/content/"
+            class="" target="_blank">框架</a>中正是使用了iframe, 恰恰利用了iframe提供页面内嵌页面的逻辑。缺点不再赘述, 坑是要慢慢躺的。</p>
 </section>
 
 <div id="tongji">
