--- a/blogcontent/blog_interview_html.html
+++ b/blogcontent/blog_interview_html.html
@@ -106,6 +106,14 @@
     <p class="a">这个什么鬼API在MDN上搜不到, 怀疑又是什么鬼编造出来的名词。CSS中控制可见性的属性有display, filter, 如果背景也算的话, 还包括background, box-shadow.</p>
     <p class="q">如何在页面上实现一个圆形的可点击区域？</p>
     <p class="a"><a href="blogcontent/blog_living_env.html" class="ex" target="_self">圆形, 你说地球?</a></p>
+    <p class="q">实现不使用 border 画出1px高的线，在不同浏览器的Quirksmode和CSSCompat模式下都能保持同一效果。</p>
+    <p class="a">height, background-color, display</p>
+    <p class="q">网页验证码是干嘛的，是为了解决什么安全问题？</p>
+    <p class="a">为了防止机器自动填充密码, 非法登录用户账号。</p>
+    <p class="q">title与h1的区别、b与strong的区别、i与em的区别？</p>
+    <p class="a">title是整个网页文件的标题, 写在head里, 常出现在浏览器标签的文本里; h1是网页内容文本中的标题。</p>
+    <p class="a">b是物理状态, 粗体; strong是逻辑状态, 只是默认显示为粗体。如果给b标签的显示用css修改为其它形式, 就会引起逻辑上的混乱。</p>
+    <p class="a">i同样是物理状态, 斜体; em同样是逻辑状态, 而且具有语义性质, 例如在朗读过程中, em标签的内容会设置为重音。</p>
 </section>
 
 <script>
