--- a/blogcontent/blog_interview_css.html
+++ b/blogcontent/blog_interview_css.html
@@ -85,6 +85,13 @@
             target="_blank">MDN关于pseudo-classes和pseudo-elements的说明</a></p>
     <p class="q">如何居中div？如何居中一个浮动元素？如何让绝对定位的div居中？</p>
     <p class="a"><a class="ex" href="../tests/make_it_center.html" target="_blank">直接查看元素</a></p>
+    <p class="q">display有哪些值？说明他们的作用。</p>
+    <p class="a">none | inline | block | list-item | inline-list-item | inline-block | inline-table | table | table-cell | table-column | table-column-group | table-footer-group | table-header-group | table-row | table-row-group | flex | inline-flex | grid | inline-grid | run-in | ruby | ruby-base | ruby-text | ruby-base-container | ruby-text-container | contents</p>
+    <p class="a">按inline、block可分为两类。按照table、flex、ruby可分为三类。当然还有最新的值揉合inline和block。</p>
+    <p class="a">
+        <a href="../tests/display.html" class="ex" target="_blank">list-item和inline-list-item</a>
+        <a href="../tests/ruby.html" class="ex" target="_blank">方块字拼音</a>
+    </p>
 </section>
 
 <div id="tongji">
