--- a/blogcontent/blog_interview_css.html
+++ b/blogcontent/blog_interview_css.html
@@ -138,6 +138,59 @@
     <p class="q">一个满屏 品 字布局 如何设计?</p>
     <p class="a">百分比确定宽度, float漂浮。或者, 使用弹性盒子布局。</p>
     <p class="a"><a href="../tests/pin.html" class="ex" target="_blank">直接查看源代码</a></p>
+    <p class="q">常见兼容性问题？</p>
+    <p class="a">解决兼容性问题有两条思路, 一是使用某些浏览器不支持的语法; 二是使用带浏览器前缀的属性和值。</p>
+    <p class="q">li与li之间有看不见的空白间隔是什么原因引起的？有什么解决办法？</p>
+    <p class="a">本来不理解这个问题, 经百度, 这是将li设置为内联块元素后出现的问题。实际上, 对所有内联元素布局时都会有这个问题。</p>
+    <p class="a">我们一般写代码都是带缩进的, HTML中多个空格会当做一个空格处理, 因此这是由字体大小导致的。修复时可以讲ul或ol字体大小设置为0px, 但是不要忘了设置li字体大小, 因为font-size在内联元素中是可继承的。</p>
+    <p class="q">经常遇到的浏览器的兼容性有哪些？原因，解决方法是什么，常用hack的技巧 ？</p>
+    <ul class="drawer">
+        <li>浏览器默认的margin和padding不同。解决方案是加一个全局的*{margin:0;padding:0;}来统一。</li>
+        <li>IE6双边距 <a href="../tests/compatibility.html" class="ex" target="_blank">直接查看源代码</a> 将其转化为行内属性。</li>
+        <li>在ie6，ie7中元素高度超出自己设置高度。原因是IE8以前的浏览器中会给元素设置默认的行高的高度导致的。解决方案是加上overflow:hidden或设置line-height为更小的高度。</li>
+        <li>min-height在IE6下不起作用。解决方案是添加 height:auto !important;height:xxpx;其中xx就是min-height设置的值。</li>
+        <li>透明性IE用filter:Alpha(Opacity=60)，而其他主流浏览器用 opacity:0.6;</li>
+        <li class="brief">
+            <p class="a">ie6的默认CSS样式，涉及到border的有border-style:inset;border-width:2px;浏览器根据自己的内核解析规则，先解析自身的默认CSS，再解析开发者书写的CSS，达到渲染标签的目的。IE6对INPUT的渲染存在bug，border:none;不被解析，当有border-width或border-color设置的时候才会令IE6去解析border-style:none;。</p>
+            <p class="a">a(有href属性)标签嵌套下的img标签，在IE下会带有边框。解决办法是加上a img{border:none;}样式。</p>
+            <p class="a">input边框问题。去掉input边框一般用border:none;就可以，但由于IE6在解析input样式时的BUG(优先级问题)，在IE6下无效。</p>
+            <p class="a">解决方案是用:border:0或border:0 none;或border:none:border-color:transparent;，推荐用第三种方案。</p>
+        </li>
+        <li class="brief">
+            <p class="a">父子标签间用margin的问题，表现在有时除IE(6/7)外的浏览器子标签margin转移到了父标签上，IE6&7下没有转移。</p>
+            <p class="a">解决办法就是父子标签间的间隔建议用padding，兄弟标签间用margin。</p>
+            <p class="a">另外一个解决办法是, 转化为BFC, 即overflow: hidden;</p>
+        </li>
+        <li class="brief">
+            <p class="a">父子关系的标签，子标签浮动导致父标签不再包裹子标签。</p>
+            <p class="a">清除浮动</p>
+            <p class="a">转化为BFC</p>
+        </li>
+    </ul>
+    <p class="q">为什么要初始化CSS样式? </p>
+    <p class="a">我是使用的是 normalize.min.css 。可以使各浏览器对相同的元素作出一致的表现。</p>
+    <p class="q">absolute的containing block计算方式跟正常流有什么不同？</p>
+    <p class="a">正常流cb为就近的父元素的content box（除margin,border,padding外的区域）</p>
+    <p class="a">absolute的cb则是找到其祖先元素中最近的position属性非static的元素, 然后判断。</p>
+    <p class="q">CSS里的visibility属性有个collapse属性值是干嘛用的？在不同浏览器下以后什么区别？</p>
+    <p class="a">这个属性值是为了快速移除行列而设计的, 移除过程中不用计算全部表格。应用在表格里的显示效果与display: none;一致。</p>
+    <p class="a">对于其它元素, 显示效果与visibility: hidden;一致, 即留出空白区域。</p>
+    <p class="a">不过, 谷歌浏览器中似乎collapse与hidden一致。</p>
+    <p class="q">position跟display、margin collapse、overflow、float这些特性相互叠加后会怎么样？</p>
+    <p class="a">首先overflow: hidden;会构建一个新的BFC, 可以包含浮动元素。</p>
+    <p class="a">display: none;会使元素彻底消失, margin也会消失。</p>
+    <p class="a">float相当于z-index上高出一级的位置上重新开始排列。</p>
+    <p class="q">对BFC规范(块级格式化上下文：block formatting context)的理解？</p>
+    <p class="a">简单来说，BFC 就是一种属性，这种属性会影响着元素的定位以及与其兄弟元素之间的相互作用。</p>
+    <p class="a">IE6-7 并不支持 W3C 的 BFC ，而是使用私有属性 hasLayout 。从表现上来说，hasLayout 跟 BFC 很相似。使用 zoom: 1 既可以触发 hasLayout 又不会对元素造成其他影响，相对来说会更为方便。</p>
+    <p class="a">满足下面任一条件的元素，会触发为 BFC ：</p>
+    <ul>
+        <li>浮动元素，float 除 none 以外的值</li>
+        <li>绝对定位元素，position（absolute，fixed）</li>
+        <li>display 为以下其中之一的值 inline-blocks，table-cells，table-captions</li>
+        <li>overflow 除了 visible 以外的值（hidden，auto，scroll）</li>
+    </ul>
+    <p class="a"><a href="../tests/overflow.html" class="ex" target="_blank">直接查看源代码</a></p>
 </section>
 
 <script>
