--- a/blogcontent/blog_interview_css.html
+++ b/blogcontent/blog_interview_css.html
@@ -129,6 +129,7 @@
             <p class="a">transform: skew、scale、rotate、translate</p>
         </li>
     </ul>
+    <p class="a"><a href="http://www.ibm.com/developerworks/cn/web/1202_zhouxiang_css3/" class="ex" target="_blank">外链文章</a></p>
     <p class="q">请解释一下CSS3的Flexbox（弹性盒布局模型）,以及适用场景？</p>
     <p class="a">弹性盒模型可以用简单的方式满足很多常见的复杂的布局需求。它的优势在于开发人员只是声明布局应该具有的行为，而不需要给出具体的实现方式。浏览器会负责完成实际的布局。该布局模型在主流浏览器中都得到了支持。</p>
     <p class="a">应用场景例如图片展示（格子拼图）、柱状图; （个人认为display属性分几大派系, 每一派系都能撑起一片天。）</p>
