--- a/blogcontent/blog_my_words.html
+++ b/blogcontent/blog_my_words.html
@@ -19,17 +19,17 @@
 
 <section class="blog-content">
     当别人对我说"怎么你总认为你是对的?"……<br/>
-    我接到"难道只有我这么认为么?"……<br/>
+    我接道"难道只有我这么认为么?"……<br/>
     "是的。""是的。""是的。""是的!"<br/>
     我的反应是, 一般站在我这边的人会认为我是对的, 那么"只有我这么认为", 什么鬼? 没人站在我这边, Loneliness!!<br/>
-    <strong>Too young too naive!</strong><br/>
+    <br/><strong>Too young too naive!</strong><br/><br/>
     其实, 大多数时候, 我根本不认为我是对的, 恰恰相反, 我抬高音量, 在一些文章里不是写得很清楚了么, 恰恰说明说话人的不自信, 担心听话人不能接受他的意思。<br/>
-    <strong>Force!</strong><br/>
+    <br/><strong>Force!</strong><br/><br/>
     说到强迫接受我的意思, 为什么没人在意我的不自信是需要关怀的呢? 好吧, 我强迫别人接受我认为是对的事情, 这是不恰当的, 究其原因在于我的音量抬高了。<br/>
-    <strong>Psychological Transmision</strong><br/>
+    <br/><strong>Psychological Transmision</strong><br/><br/>
     哈哈, 说实话, 我开始关心如何默默地传达我的意思, 注意⚠️, 不是默默的控制!<br/>
     心灵传输不管我用多么低的音量, 都能准确的将我的意思传递过去。<br/>
-    <strong>请接受我吧!</strong><br/>
+    <br/><strong>O, 请接受我吧!</strong><br/><br/>
 </section>
 
 <div id="tongji">
