--- a/blogcontent/blog_interview_js.html
+++ b/blogcontent/blog_interview_js.html
@@ -51,6 +51,306 @@
         <li>利用原型方式来创建;</li>
         <li>混合方式来创建。</li>
     </ul>
+
+    <p class="q">Javascript作用域链?</p>
+    <p class="a">闭包。</p>
+    <p class="a">当代码在一个环境中执行时，会创建变量对象的一个作用域链。如果是个函数，则将其活动对象作为变量对象。活动对象在最开始只包含一个arguments对象。而下一个变量对象则来自下一个包含环境。如此一直延续到全局执行环境，这种组织形式即为作用域链。内部函数可访问外部变量，外部变量无法访问内部函数。注意：js没有块级作用域，若要形成块级作用域，可通过（function（）｛｝）（）；立即执行的形式实现。</p>
+
+    <p class="q">谈谈This对象的理解。</p>
+    <ul>
+        <li>this总是指向函数的直接调用者（而非间接调用者）;</li>
+        <li>如果有new关键字，this指向new出来的那个对象;</li>
+        <li>在事件中，this指向触发这个事件的对象，特殊的是，IE中的attachEvent中的this总是指向全局对象Window; 在addEventListener中this总是指向DomElement。</li>
+    </ul>
+
+    <p class="q">eval是做什么的？</p>
+    <p class="a">计算某个字符串，并执行其中的的 JavaScript 代码。eval(string)。应该避免使用eval，不安全，非常耗性能（2次，一次解析成js语句，一次执行）。由JSON字符串转换为JSON对象的时候可以用eval，var obj =eval('('+ str +')');</p>
+    <p class="a">当然, 使用JSON.parse更佳。</p>
+    <p class="a">非严格模式下, eval里变量的作用域是window。</p>
+
+    <p class="q">什么是window对象? 什么是document对象?</p>
+    <p class="a">Window对象代表浏览器中打开的一个窗口。document对象代表整个HTML文档。</p>
+
+    <p class="q">null，undefined的区别？</p>
+    <p class="a">null表示一个对象被定义了，但存放的是空指针。undefined 表示这个值不存在。typeof（null）－object；typeof（undefined）－undefined。</p>
+
+    <p class="q">写一个通用的事件侦听器函数(机试题)。</p>
+<pre>
+(dom.addEventListener || dom.attachEvent)(function(event){
+    console.log(event);
+});
+</pre>
+
+    <p class="q">["1", "2", "3"].map(parseInt) 答案是多少？</p>
+    <p class="a">[1, NaN, NaN] <a href="../tests/map.html" class="ex" target="_blank">查看console结果。</a></p>
+    <ul>
+        <li>parseInt("1", 0); // 1</li>
+        <li>parseInt("2", 1); // NaN</li>
+        <li>parseInt("3", 2); // NaN</li>
+    </ul>
+
+    <p class="q">关于事件，IE与火狐的事件机制有什么区别？ 如何阻止冒泡？</p>
+    <p class="a">IE为事件冒泡，Firefox同时支持事件捕获和冒泡事件。但并非所有浏览器都支持事件捕获。jQuery中使用event.stopPropagation()方法可阻止冒泡;（旧ie的方法 ev.cancelBubble = true;）</p>
+
+    <p class="q">什么是闭包（closure），为什么要用它？</p>
+    <p class="a">闭包指的是一个函数可以访问另一个函数作用域中变量的函数。常见的构造方法，是在一个函数内部定义另外一个函数。内部函数可以引用外层的参数和变量；参数和变量不会被垃圾回收机制回收。注意，闭包的原理是作用域链，所以闭包访问的上级作用域中的变量是个对象，其值为其运算结束后的最后一个值。除非用立即执行函数来解决。</p>
+
+    <p class="q">javascript 代码中的”use strict”;是什么意思 ? 使用它区别是什么？</p>
+    <p class="a">use strict是一种ECMAscript 5 添加的（严格）运行模式,这种模式使得 Javascript 在更严格的条件下运行,使JS编码更加规范化的模式,消除Javascript语法的一些不合理、不严谨之处，减少一些怪异行为。目前支持的浏览器为IE10+，Firefox 4+，Safari 5.1+和Chrome。默认支持的糟糕特性都会被禁用，比如不能用with，也不能在意外的情况下给全局变量赋值全局变量的显示声明,函数必须声明在顶层，不允许在非函数代码块内声明函数,arguments.callee也不允许使用；消除代码运行的一些不安全之处，保证代码运行的安全,限制函数中的arguments修改，严格模式下的eval函数的行为和非严格模式的也不相同(严格模式下eval用法无效, 如果在 eval 函数内声明变量，则不能在此函数外部使用该变量。);提高编译器效率，增加运行速度；为未来新版本的Javascript标准化做铺垫。</p>
+
+    <p class="q">如何判断一个对象是否属于某个类？</p>
+    <p class="a">instanceof</p>
+
+    <p class="q">new操作符具体干了什么呢?</p>
+    <ul>
+        <li>创建一个空对象，并且 this 变量引用该对象，同时还继承了该函数的原型。</li>
+        <li>属性和方法被加入到 this 引用的对象中</li>
+        <li>新创建的对象由 this 所引用，并且最后隐式的返回 this </li>
+    </ul>
+
+    <p class="q">用原生JavaScript的实现过什么功能吗？</p>
+    <p class="a">querySelector</p>
+    <p class="a">Array API</p>
+    <p class="a">我爱原生API!!!</p>
+
+    <p class="q">Javascript中，有一个函数，执行时对象查找时，永远不会去查找原型，这个函数是？</p>
+    <p class="a">Object.prototype.hasOwnProperty()</p>
+
+    <p class="q">对JSON的了解？</p>
+    <p class="a">JSON.parse()</p>
+    <p class="a">JSON.stringify()</p>
+
+    <p class="q">[].forEach.call($$("*"),function(a){ a.style.outline="1px solid #"+(~~(Math.random()*(1<<24))).toString(16) }) 能解释一下这段代码的意思吗？</p>
+    <p class="a">操作符~， 是按位取反的意思，表面上~~（取反再取反）没有意义，实际上在JS中可以将浮点数变成整数。</p>
+    <p class="a">为每一个元素加上随机上色的边框。</p>
+
+    <p class="q">js延迟加载的方式有哪些？</p>
+    <ul>
+        <li>script标签的defer、async属性。Opera浏览器不支持。defer属性必须由含src属性的script标签含有。</li>
+        <li>动态添加script dom节点。</li>
+        <li>setTimeout</li>
+    </ul>
+
+    <p class="q">Ajax 是什么? 如何创建一个Ajax？</p>
+    <p class="a">ajax的全称：Asynchronous Javascript And XML。所谓异步，在这里简单地解释就是：向服务器发送请求的时候，我们不必等待结果，而是可以同时做其他的事情，等到有了结果它自己会根据设定进行后续操作，与此同时，页面是不会发生整页刷新的，提高了用户体验。</p>
+    <ul>
+        <li>创建XMLHttpRequest对象,也就是创建一个异步调用对象</li>
+        <li>创建一个新的HTTP请求,并指定该HTTP请求的方法、URL及验证信息</li>
+        <li>设置响应HTTP请求状态变化的函数</li>
+        <li>发送HTTP请求</li>
+        <li>获取异步调用返回的数据</li>
+        <li>使用JavaScript和DOM实现局部刷新</li>
+    </ul>
+
+    <p class="q">同步和异步的区别?</p>
+    <p class="a">同步的概念应该是来自于OS中关于同步的概念:不同进程为协同完成某项工作而在先后次序上调整(通过阻塞,唤醒等方式).同步强调的是顺序性.谁先谁后.异步则不存在这种顺序性.同步：浏览器访问服务器请求，用户看得到页面刷新，重新发请求,等请求完，页面刷新，新内容出现，用户看到新内容,进行下一步操作。异步：浏览器访问服务器请求，用户正常操作，浏览器后端进行请求。等请求完，页面不刷新，新内容也会出现，用户看到新内容。</p>
+
+    <p class="q">如何解决跨域问题?</p>
+    <p class="a"><img src="../images/tongyuancelue.png" alt="" style="width: calc(800px - 4em);"></p>
+    <p class="a">前端解决跨域问题的方法:</p>
+    <ul>
+        <li>document.domain + iframe (只有在主域相同的时候才能使用该方法)</li>
+        <li>动态创建script</li>
+        <li>location.hash + iframe</li>
+        <li>window.name + iframe</li>
+        <li>postMessage（HTML5中的XMLHttpRequest Level 2中的API）(由于同源策略，这里event.source不可以访问window对象)</li>
+        <li>CORS (xdr)</li>
+        <li>JSONP</li>
+        <li>web sockets</li>
+    </ul>
+    <p class="a"><a href="http://blog.csdn.net/joyhen/article/details/21631833" class="ex" target="_blank">外文链接</a></p>
+
+    <p class="q">页面编码和被请求的资源编码如果不一致如何处理？</p>
+<pre>
+&lt;script src="http://www.xxx.com/test.js" charset="utf-8"&gt;&lt;/script&gt;
+</pre>
+
+    <p class="q">模块化开发怎么做？</p>
+    <p class="a">就个人心得讲, 模块化是熟悉业务以后, 自然而然的产物。</p>
+
+    <p class="q">AMD（Modules/Asynchronous-Definition）、CMD（Common Module Definition）规范区别？</p>
+    <p class="a">对于依赖的模块，AMD 是提前执行，CMD 是延迟执行。</p>
+    <p class="a">CMD 推崇依赖就近，AMD 推崇依赖前置。</p>
+
+    <p class="q">requireJS的核心原理是什么？（如何动态加载的？如何避免多次加载的？如何 缓存的？）</p>
+    <p class="a">requireJS通过动态创建script标签动态加载JS文件。</p>
+    <p class="a">为了避免多次加载, requireJS为每个文件编号, 编号相同的文件只加载一次。</p>
+
+    <p class="q">让你自己设计实现一个requireJS，你会怎么做？</p>
+    <p class="a">我确实自己实现过一个loader, 使用jquery ajax加载script。不过, 当时更多的是业务上的逻辑, 以适应不同平台的页面。</p>
+
+    <p class="q">谈一谈你对ECMAScript6的了解？</p>
+    <p class="a"><a href="http://mp.weixin.qq.com/s?__biz=MzAxODE2MjM1MA==&mid=2651551081&idx=1&sn=fbab887bf0f91de2bb33c405f9392fe4&scene=0#wechat_redirect" class="ex" target="_blank">外文链接</a></p>
+
+    <p class="q">document.write和 innerHTML 的区别?</p>
+    <p class="a">document.write是重写整个document, 写入内容是字符串的html</p>
+    <p class="a">innerHTML是HTMLElement的属性，是一个元素的内部html内容</p>
+
+    <p class="q">DOM操作——怎样添加、移除、移动、复制、创建和查找节点?</p>
+    <p class="a">appendChild</p>
+    <p class="a">removeChild</p>
+    <p class="a">querySelector</p>
+
+    <p class="q">.call() 和 .apply() 的含义和区别？</p>
+    <p class="a">相比call, apply接收数组作为参数列表。</p>
+
+    <p class="q">数组和对象有哪些原生方法，列举一下？</p>
+    <p class="a">
+        <img src="../images/array.png" alt="array api" style="width: calc(400px - 2em);">
+        <img src="../images/object.png" alt="object api" style="width: calc(400px - 2em);">
+    </p>
+
+    <p class="q">JS 怎么实现一个类。怎么实例化这个类</p>
+    <p class="a">JS ES5是函数为第一类元素的存在, 所以通过new fn实例化一个类, fn内部this指针为正在实例化的对象指针。</p>
+
+    <p class="q">JavaScript中的作用域与变量声明提升？</p>
+    <p class="a">变量声明提升即执行function时, 内部变量的内存空间会第一时间创建出来。</p>
+
+    <p class="q">如何编写高性能的Javascript？</p>
+    <p class="a">尽量使用原生API, 使用高效的算法。</p>
+
+    <p class="q">那些操作会造成内存泄漏？</p>
+    <ul>
+        <li>给DOM对象添加的属性是一个对象的引用。document.getElementById('myDiv').myProp = {};</li>
+        <li>DOM对象与JS对象相互引用。</li>
+        <li>给DOM对象用attachEvent绑定事件。</li>
+    </ul>
+
+    <p class="q">JQuery的源码看过吗？能不能简单概况一下它的实现原理？</p>
+    <p class="a">封装。 P.S.jquery使用的el解析库并不是document.querySelector</p>
+
+    <p class="q">jQuery.fn的init方法返回的this指的是什么对象？为什么要返回this？</p>
+    <p class="a">即jQuery对象, this是new关键字创建的对象指针。</p>
+
+    <p class="q">jquery中如何将数组转化为json字符串，然后再转化回来？</p>
+    <p class="a">这个有原生API啊, JSON.parse .stringify</p>
+
+    <p class="q">jQuery 的属性拷贝(extend)的实现原理是什么，如何实现深拷贝？</p>
+<pre>
+jQuery.extend = jQuery.fn.extend = function() {
+    var options, name, src, copy, copyIsArray, clone,
+        target = arguments[0] || {},
+        i = 1,
+        length = arguments.length,
+        deep = false;
+
+    // Handle a deep copy situation
+    if ( typeof target === "boolean" ) {
+        deep = target;
+        target = arguments[1] || {};
+        // skip the boolean and the target
+        i = 2;
+    }
+
+    // Handle case when target is a string or something (possible in deep copy)
+    if ( typeof target !== "object" && !jQuery.isFunction(target) ) {
+        target = {};
+    }
+
+    // extend jQuery itself if only one argument is passed
+    if ( length === i ) {
+        target = this;
+        --i;
+    }
+
+    for ( ; i < length; i++ ) {
+        // Only deal with non-null/undefined values
+        if ( (options = arguments[ i ]) != null ) {
+            // Extend the base object
+            for ( name in options ) {
+                src = target[ name ];
+                copy = options[ name ];
+
+                // Prevent never-ending loop
+                if ( target === copy ) {
+                    continue;
+                }
+
+                // Recurse if we're merging plain objects or arrays
+                if ( deep && copy && ( jQuery.isPlainObject(copy) || (copyIsArray = jQuery.isArray(copy)) ) ) {
+                    if ( copyIsArray ) {
+                        copyIsArray = false;
+                        clone = src && jQuery.isArray(src) ? src : [];
+
+                    } else {
+                        clone = src && jQuery.isPlainObject(src) ? src : {};
+                    }
+
+                    // Never move original objects, clone them
+                    target[ name ] = jQuery.extend( deep, clone, copy );
+
+                // Don't bring in undefined values
+                } else if ( copy !== undefined ) {
+                    target[ name ] = copy;
+                }
+            }
+        }
+    }
+
+    // Return the modified object
+    return target;
+};
+</pre>
+    <p class="a">源码面前, 没有秘密。</p>
+
+    <p class="q">jquery.extend 与 jquery.fn.extend的区别？</p>
+    <p class="a">jquery.extend是工具方法。</p>
+    <p class="a">jquery.fn.extend是修改的是jquery本身。</p>
+
+    <p class="q">jQuery 的队列是如何实现的？队列可以用在哪些地方？</p>
+    <p class="a">底层利用Array的push、shift。可以用在动画上, 分镜。</p>
+
+    <p class="q">谈一下Jquery中的bind(),live(),delegate(),on()的区别？</p>
+    <ul>
+        <li>.bind()是直接绑定在元素上</li>
+        <li>.live()则是通过冒泡的方式来绑定到元素上的。更适合列表类型的，绑定到document DOM节点上。和.bind()的优势是支持动态数据</li>
+        <li>.delegate()则是更精确的小范围使用事件代理，性能优于.live()</li>
+        <li>.on()则是最新的1.9版本整合了之前的三种方式的新事件绑定机制</li>
+    </ul>
+
+    <p class="q">JQuery一个对象可以同时绑定多个事件，这是如何实现的？</p>
+    <p class="a">jQuery内部维护一个handler对象数组, 当某个事件触发时, 调用相应数组内的所有事件处理函数。</p>
+
+    <p class="q">是否知道自定义事件。jQuery里的fire函数是什么意思，什么时候用？</p>
+    <p class="a">并没有在jQuery 3.1中找到事件的fire函数。貌似以前也只听说过trigger函数。</p>
+
+    <p class="q">jQuery 是通过哪个方法和 Sizzle 选择器结合的？（jQuery.fn.find()进入Sizzle）</p>
+    <p class="a">为什么用 Sizzle 而不是 document.querySelector 呢?</p>
+
+    <p class="q">针对 jQuery性能的优化方法？</p>
+    <p class="a">原生方法 > jQuery工具函数 > jQuery对象方法</p>
+    <p class="a">读取局部变量比读取全局变量快得多.在调用对象方法的时候，closure模式要比prototype模式更快.</p>
+    <p class="a">使用Pub/Sub模式管理事件(.on, .trigger), 还可以考虑使用deferred对象(promise)。</p>
+
+    <p class="q">jQuery UI 与 jquery 的主要区别?</p>
+    <p class="a">jQuery是一个js库，主要提供的功能是选择器，属性修改和事件绑定等等。jQuery UI则是在jQuery的基础上，利用jQuery的扩展性，设计的插件。提供了一些常用的界面元素，诸如对话框、拖动行为、改变大小行为等等。</p>
+
+    <p class="q">jquery 中如何将数组转化为json字符串，然后再转化回来？</p>
+<pre>
+$.fn.stringify = function() {
+  return JSON.stringify(this);
+}
+
+$(array).stringify();
+</pre>
+
+    <p class="q">jQuery和Zepto的区别？各自的使用场景？</p>
+    <p class="a">Zepto属轻量级js库, 主要应用在移动端。不过, 我之前的开发中不很喜欢使用这个库, 给人的感觉是限制太多。</p>
+
+    <p class="q">Zepto的点透问题如何解决？</p>
+    <p class="a">科普: zepto的tap通过兼听绑定在document上的touch事件来完成tap事件的模拟的,及tap事件是冒泡到document上触发的,再点击完成时的tap事件(touchstart\touchend)需要冒泡到document上才会触发，而在冒泡到document之前，用户手的接触屏幕(touchstart)和离开屏幕(touchend)是会触发click事件的,因为click事件有延迟触发(这就是为什么移动端不用click而用tap的原因)(大概是300ms,为了实现safari的双击事件的设计)，所以在执行完tap事件之后，弹出来的选择组件马上就隐藏了，此时click事件还在延迟的300ms之中，当300ms到来的时候，click到的其实不是完成而是隐藏之后的下方的元素，如果正下方的元素绑定的有click事件此时便会触发，如果没有绑定click事件的话就当没click，但是正下方的是input输入框(或者select选择框或者单选复选框)，点击默认聚焦而弹出输入键盘，也就出现了上面的点透现象。</p>
+    <p class="a">用touchend代替tap事件并阻止掉touchend的默认行为preventDefault().</p>
+
+    <p class="q">jQueryUI如何自定义组件?</p>
+    <p class="a">用$.widget()方法开始定义你的组件，它只接收三个参数：第一个是组件名称，第二个是可选的基类组件（默认的基类是$.Widget），第三个是组件的原型。</p>
+
+    <p class="q">需求：实现一个页面操作不会整页刷新的网站，并且能在浏览器前进、后退时正确响应。给出你的技术实现方案？</p>
+    <p class="a">使用history popup事件。本页面即是。</p>
+
+    <p class="q">如何判断当前脚本运行在浏览器还是node环境中？（阿里）</p>
+    <p class="a">window对象。通过判断Global对象是否为window，如果不为window，当前脚本没有运行在浏览器中。</p>
+
+    <p class="q"></p>
 </section>
 
 <div id="tongji">
