--- a/toonly/x-handlebars-templates/article_list.html
+++ b/toonly/x-handlebars-templates/article_list.html
@@ -4,6 +4,11 @@
         padding: 20px;
         background: rgba(200, 200, 200, 0.3);
         border-radius: 10px;
+        border-bottom: solid 1px #000000;
+    }
+
+    ul.blogs + ul.blogs  {
+        border-top: solid 1px #333333;
     }
 
     ul.blogs:before {
