--- a/blogcontent/blog_my_house.html
+++ b/blogcontent/blog_my_house.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scale=0">
     <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
@@ -49,6 +49,11 @@
         <li><img src="../images/house/柜.jpg"/></li>
         <li><img src="../images/house/升降桌.jpg"/></li>
         <li><img src="../images/house/椅子.jpg"/></li>
+        <li><img src="../images/house/TB2angGqXXXXXXqXFXXXXXXXXXX_!!1912022932.jpg"/></li>
+        <li><img src="../images/house/TB2fZnetVXXXXa1XpXXXXXXXXXX_!!1043832306.jpg"/></li>
+        <li><img src="../images/house/TB2hvw1qXXXXXbMXXXXXXXXXXXX_!!1912022932.jpg"/></li>
+        <li><img src="../images/house/TB22Zg2qXXXXXcTXXXXXXXXXXXX_!!1912022932.jpg"/></li>
+        <li><img src="../images/house/TB27pFgqpXXXXapXXXXXXXXXXXX_!!1912022932.jpg"/></li>
     </ul>
 </section>
 
