--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 
             text-align: center;
             color: white;
-            background-color: transparent;
+            background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0)), color-stop(0.5, rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0)));
         }
 
         div.pager > svg {
             position: relative;
             top: 50%;
+            left: 0;
+
+            margin-top: -50px;
 
             width: 80px;
-            height: 50%;
-
-            background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0)));
-            -webkit-box-reflect: above 0 -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0.6)));
+            height: 100px;
         }
     </style>
     <script id="require.min" type="text/javascript" src="./javascripts/require.min.js"></script>
