--- a/blogcontent/blog_mouse_move.html
+++ b/blogcontent/blog_mouse_move.html
@@ -24,6 +24,37 @@
             width: 100%;
             height: 100%;
         }
+
+        @keyframes active-ctrl {
+            0% {
+                transform: scale(1.0);
+            }
+            100% {
+                transform: scale(1.2);
+            }
+        }
+
+        .ctrl-start {
+            cursor: pointer;
+
+            font-size: 50px;
+            line-height: 50px;
+
+            padding: 1em;
+
+            box-shadow: 0 0 10px 5px rgba(200, 200, 200, 0.75), inset 0 0 10px 5px rgba(200, 200, 200, 0.75);
+
+            position: fixed;
+            left: 50%;
+            top: 50%;
+
+            margin-top: -1.5em;
+            margin-left: -3em;
+
+            animation: active-ctrl 1s ease-in-out infinite alternate;
+
+            visibility: hidden;
+        }
     </style>
 </head>
 <body>
@@ -33,6 +64,7 @@
 
 <section class="blog-content-fixed">
     <canvas id="main"></canvas>
+    <div class="ctrl-start">点击开始</div>
 </section>
 
 <script type="text/javascript" src="../toonly/javascripts/utils/3d_.js"></script>
