--- a/blogcontent/blog_my_house.html
+++ b/blogcontent/blog_my_house.html
@@ -49,6 +49,8 @@
         <li><img src="../images/house/柜.jpg"/></li>
         <li><img src="../images/house/升降桌.jpg"/></li>
         <li><img src="../images/house/椅子.jpg"/></li>
+        <li><img src="../images/house/TB1XGgxIpXXXXcnXXXXXXXXXXXX_!!0-item_pic.jpg"/></li>
+        <li><img src="../images/house/TB2RXbGmpXXXXXKXpXXXXXXXXXX_!!109784949.jpg"/></li>
         <li><img src="../images/house/TB2angGqXXXXXXqXFXXXXXXXXXX_!!1912022932.jpg"/></li>
         <li><img src="../images/house/TB2fZnetVXXXXa1XpXXXXXXXXXX_!!1043832306.jpg"/></li>
         <li><img src="../images/house/TB2hvw1qXXXXXbMXXXXXXXXXXXX_!!1912022932.jpg"/></li>
