--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -11,6 +11,58 @@
     <script id="require.min" type="text/javascript" src="../javascripts/require.min.js"></script>
     <script type="text/javascript" src="../require-config.js"></script>
     <script type="text/javascript" src="../toonly/javascripts/init/index_.js"></script>
+
+    <style>
+        #resume-marker {
+            position: absolute;
+            top: 4em;
+            right: 4em;
+            width: 2em;
+            height: 2em;
+            text-align: center;
+            font-size: 26px;
+            line-height: 2em;
+            font-weight: bold;
+            cursor: pointer;
+            background: #fff;
+            color: #79a8ae;
+            opacity: 0.5;
+
+            transition: opacity 0.1s cubic-bezier(0.694, 0.0482, 0.335, 1);
+        }
+
+        #resume-marker:hover {
+            opacity: 1;
+        }
+
+        #resume {
+            cursor: pointer;
+            background: url("../images/曹力升的个人简历.jpg") no-repeat center;
+            background-size: contain;
+
+            width: 0;
+            height: 0;
+
+            position: absolute;
+            left: 50%;
+            top: 50%;
+
+            transform: rotateY(180deg);
+            transition: all 1s;
+        }
+
+        #resume.show {
+            left: 50px;
+            right: 50px;
+            top: 0;
+            bottom: 0;
+
+            width: auto;
+            height: auto;
+
+            transform: rotateY(0deg);
+        }
+    </style>
 </head>
 <body>
 <section class="page-header">
@@ -18,8 +70,11 @@
     <h2 class="project-tagline">^_^</h2>
     <a target="_blank" href="https://github.com/CaoYouXin/myblog" class="btn">View on GitHub</a>
     <a target="_blank" href="https://github.com/CaoYouXin/myblog/zipball/master" class="btn">Download .zip</a>
-    <a target="_blank" href="https://github.com/CaoYouXin/myblog/tarball/master" class="btn">Download .tar.gz</a>
+    <a target="_blank" href="https://caoyouxin.gitbooks.io/pageslider/content" class="btn">View Book</a>
 </section>
+
+<div id="resume-marker" onclick="document.getElementById('resume').classList.add('show');">简</div>
+<div id="resume" onclick="this.classList.remove('show');"></div>
 
 <section class="main-content">
     <div id="article_list"></div>
