--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -40,12 +40,12 @@
             background: url("../images/曹力升的个人简历.jpg") no-repeat center;
             background-size: contain;
 
-            width: 0;
-            height: 0;
+            width: 1px;
+            height: 1px;
 
             position: absolute;
-            left: 50%;
-            top: 50%;
+            left: 0;
+            top: 0;
 
             transform: rotateY(180deg);
             transition: all 1s;
