--- a/blogcontent/index_.html
+++ b/blogcontent/index_.html
@@ -43,7 +43,7 @@
             width: 1px;
             height: 1px;
 
-            position: absolute;
+            position: fixed;
             left: 0;
             top: 0;
 
