3D场景里添加文本

--- a/blogcontent/blog_mouse_move.html
+++ b/blogcontent/blog_mouse_move.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../javascripts/three.min.js"></script>
     <script type="text/javascript" src="../javascripts/stats.min.js"></script>
     <script type="text/javascript" src="../javascripts/Animation.js"></script>
+    <script type="text/javascript" src="../javascripts/GeometryUtils.js"></script>
     <script type="text/javascript" src="../javascripts/AnimationHandler.js"></script>
     <script type="text/javascript" src="../javascripts/KeyFrameAnimation.js"></script>
 
