--- a/_dev/index_.html
+++ b/_dev/index_.html
@@ -2,72 +2,18 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title>CaoYouXin&#39;s blog by CaoYouXin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../toonly/stylesheets/blog.css" media="screen">
-    <script id="require.min" type="text/javascript" src="../javascripts/require.min.js"></script>
-    <script type="text/javascript" src="../require-config.js"></script>
-    <script type="text/javascript" src="../toonly/javascripts/init/index_.js"></script>
+    <title>恍恍惚惚；杳杳冥冥！</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <style>
-        #resume-marker {
-            position: absolute;
-            top: 4em;
-            right: 4em;
-            width: 2em;
-            height: 2em;
-            text-align: center;
-            font-size: 26px;
-            line-height: 2em;
-            font-weight: bold;
-            cursor: pointer;
-            background: #fff;
-            color: #79a8ae;
-            opacity: 0.5;
-
-            transition: opacity 0.1s cubic-bezier(0.694, 0.0482, 0.335, 1);
-        }
-
-        #resume-marker:hover {
-            opacity: 1;
-        }
-
-        #resume {
-            cursor: pointer;
-            background: url("../images/曹力升的个人简历.jpg") no-repeat center;
-            background-size: contain;
-
-            width: 1px;
-            height: 1px;
-
-            position: fixed;
-            left: 0;
-            top: 0;
-
-            transform: rotateY(180deg);
-            transition: all 1s;
-        }
-
-        #resume.show {
-            left: 50px;
-            right: 50px;
-            top: 0;
-            bottom: 0;
-
-            width: auto;
-            height: auto;
-
-            transform: rotateY(0deg);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../3rdLib/normalize/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index_.css">
+    <link rel="stylesheet" type="text/css" href="css/tongji.css">
 </head>
 <body>
 <section class="page-header">
-    <h1 class="project-name">CaoYouXin&#39;s blog</h1>
+    <h1 class="project-name">恍恍惚惚;杳杳冥冥!</h1>
     <h2 class="project-tagline">^_^</h2>
+
     <a target="_blank" href="https://github.com/CaoYouXin/myblog" class="btn">View on GitHub</a>
     <a target="_blank" href="https://github.com/CaoYouXin/myblog/zipball/master" class="btn">Download .zip</a>
     <a target="_blank" href="https://caoyouxin.gitbooks.io/pageslider/content" class="btn">View Book</a>
@@ -78,6 +24,10 @@
 
 <section class="main-content">
     <div id="article_list"></div>
+</section>
+
+<section class="page-footer">
+
 </section>
 
 <div id="tongji">
