build page slider

--- a/__dev/pageslider/router.html
+++ b/__dev/pageslider/router.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Router</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <link rel="stylesheet" type="text/css" href="../../3rdLib/normalize/normalize.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="pageslider.css">
 
     <script type="text/javascript" src="../../3rdLib/md5/md5.min.js"></script>
-    <script type="text/javascript" src="../../3rdLib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../../3rdLib/handlebars/handlebars.min.js"></script>
     <script type="text/javascript" src="router.js"></script>
     <script type="text/javascript" src="pageslider.js"></script>
