--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <script>
     PageSlider.init();
-    Router.go('build/index_.html', PageSlider.go);
+    Router.go('_dev/index_.html', PageSlider.go);
 </script>
 </body>
 </html>
