--- a/_dev/index_.html
+++ b/_dev/index_.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../3rdLib/normalize/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/index_.css">
     <link rel="stylesheet" type="text/css" href="css/tongji.css">
+
+    <script type="text/javascript" src="../3rdLib/promise/es6-promise.js"></script>
+    <script type="text/javascript" src="../3rdLib/nanoajax/nanoajax.min.js"></script>
 </head>
 <body>
 <section class="page-header">
@@ -29,6 +32,8 @@
 <section class="page-footer">
 
 </section>
+
+<script type="text/javascript" src="js/index_.js"></script>
 
 <div id="tongji">
     <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
