--- a/_dev/x-handlebars-templates/article_list.html
+++ b/_dev/x-handlebars-templates/article_list.html
@@ -15,7 +15,7 @@
         display: block;
         width: auto;
         height: 50px;
-        font-size: 30px;
+        font-size: 2em;
         line-height: 50px;
         content: attr(data-rel);
         color: #666666;
@@ -25,6 +25,9 @@
         padding-left: 10px;
     }
 
+    ul.blogs span {
+        font-size: 1.8em;
+    }
 </style>
 
 {{#each this}}
