--- a/_dev/x-handlebars-templates/article_list.html
+++ b/_dev/x-handlebars-templates/article_list.html
@@ -1,6 +1,6 @@
 <style>
     ul.blogs {
-        list-style: none;
+        list-style: inside decimal;
         padding: 20px;
         background: rgba(200, 200, 200, 0.3);
         border-radius: 10px;
