--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>恍恍惚惚；杳杳冥冥！</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="3rdLib/normalize/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="build/pageslider/pageslider.min.css">
 
     <script type="text/javascript" src="3rdLib/md5/md5.min.js"></script>
@@ -16,7 +16,8 @@
 </head>
 <body>
 <script>
-    PageSlider.init(Cookies.getJSON('ps-pages'));
+    var psPages = Cookies.getJSON('ps-pages');
+    PageSlider.init(psPages);
     var urlSnapshot = Cookies.get('url-snapshot');
     Router.go((null !== urlSnapshot && undefined !== urlSnapshot) ? urlSnapshot : '_dev/index_.html', PageSlider.go);
 </script>
